Complete vee-validate

--- a/i18n/locales/en-US.json
+++ b/i18n/locales/en-US.json
@@ -709,7 +709,7 @@
     "kickByServer3": "The signing room is full",
     "kickByServer4": "The signing room has exceeded the time limit and is closed",
     "labelError": "Please ensure that the name is not empty and is less than 20 characters.",
-    "maxNodeExceed": "The number of people cannot be set beyond the upper limit: {limit}}",
+    "maxNodeExceed": "The number of people cannot be set beyond the upper limit: {limit}",
     "maxNodeInvalid": "The number of people must be greater than 0 and an integer",
     "mobileSigSubmit": "The signature submitted, please close this page and return to the document to confirm.",
     "mobileSignEnd": "Mobile connection signature completed, please close this page",
@@ -1212,7 +1212,7 @@
     "previewName": "Preview name",
     "publicFormEmailSubject": "BreezySign invites you to sign 'Registration Form for Lecture'",
     "publicFormEmailSubject2": "{companyName} invites you to sign '{taskName}'",
-    "regexExample": "Ex: \\d{1,}",
+    "regexExample": "Ex: \\d'{'1,}'}",
     "signerName": "Title (e.g. manager, client)",
     "signerGroupName": "Name*",
     "signerGroupDescription": "Description",
@@ -1252,7 +1252,7 @@
     "b2b2cTask": "Cloud Digital Certificate Task",
     "b2b2cWaitMail": "Please check your email at {mail}. After receiving the verification email, you must complete the identity verification within 1 minute, otherwise the signing process will fail.",
     "b2b2cWaiting": "Authorization in progress...",
-    "bottomHalfDefault": "The signature on this agreement is signed by yourself, and the signature image is as follows: \\n{{SIGNATURE}}",
+    "bottomHalfDefault": "The signature on this agreement is signed by yourself, and the signature image is as follows: \\n{SIGNATURE}",
     "checkPermission": "We are checking camera and microphone permissions. Please grant the necessary permissions",
     "checkboxGrp": "Checkbox group",
     "clickOrDragAttach": "Click or drag attachments here",
