--- a/i18n/locales/zh-CN.json
+++ b/i18n/locales/zh-CN.json
@@ -709,7 +709,7 @@
     "kickByServer3": "签署房间已满",
     "kickByServer4": "签署房间已超过时间限制关闭",
     "labelError": "请确保名称不为空且小于20个字符",
-    "maxNodeExceed": "人数不可设置超出上限：  {count}",
+    "maxNodeExceed": "人数不可设置超出上限：  {limit}",
     "maxNodeInvalid": "人数于必须大于0且是整数",
     "mobileSigSubmit": "签名已送出，请关閉此頁返回文件確認",
     "mobileSignEnd": "手机连接签名结束，请关闭此页",
@@ -1212,7 +1212,7 @@
     "previewName": "预览姓名",
     "publicFormEmailSubject": "BreezySign邀请您签署「講座報名表」",
     "publicFormEmailSubject2": "{companyName}邀请您签署「{taskName}」",
-    "regexExample": "例如：\\d{1,}",
+    "regexExample": "例如：\\d'{'1,}'}",
     "signerName": "签署人称谓（例如：主管、客户）",
     "signerGroupName": "名称*",
     "signerGroupDescription": "描述",
@@ -1252,7 +1252,7 @@
     "b2b2cTask": "云端凭证任务",
     "b2b2cWaitMail": "请至{mail}信箱收信，收到验证信后，须在1分钟内完成身分验证，否则会签署失败。",
     "b2b2cWaiting": "等待授权中...",
-    "bottomHalfDefault": "本同意书签名均为您本人所签，您的签名图如下列： \\n{{SIGNATURE}}",
+    "bottomHalfDefault": "本同意书签名均为您本人所签，您的签名图如下列： \\n{SIGNATURE}",
     "checkPermission": "正在确认摄影机与麦克风权限，请给予相关授权",
     "checkboxGrp": "复选框组",
     "clickOrDragAttach": "点击或拖曳附件至此",
