--- a/i18n/locales/zh-TW.json
+++ b/i18n/locales/zh-TW.json
@@ -18,6 +18,7 @@
     "forgotPassword": "忘記密碼",
     "forms": "表單",
     "formDetail": "表單詳細內容",
+    "googleDrive": "Google Drive 設定",
     "groupMembers": "組織管理",
     "home": "首頁",
     "invite": "接受加入邀請",
@@ -28,6 +29,7 @@
     "payment": "訂購摘要",
     "paymentFailed": "訂購失敗",
     "paymentResult": "訂單結果",
+    "pdfExport": "副本匯出",
     "plan": "方案資訊",
     "points": "我的點數",
     "previewDoc": "預覽文件",
@@ -85,6 +87,7 @@
     "b2b2c": "雲端憑證驗證流程",
     "b2b2cInsufficient": "任務數量餘額不足",
     "b2b2cNotSet": "缺少雲端憑證的簽章欄位",
+    "bindGoogleDrive": "Google Drive綁定",
     "bookExpiredDate": "簽到簿到期日",
     "bookName": "簽到簿名稱",
     "bookPublished": "簽到簿已經發布成功",
@@ -117,7 +120,9 @@
     "confirm": "確認",
     "confirmApiKey": "確認 API KEY",
     "confirmB2b2c": "此文件要求以雲端憑證{0}簽章",
+    "confirmDeleteAllTrash": "確定要刪除所有任務嗎？",
     "confirmEndTrial": "確定要結束活動試用?",
+    "confirmUnbinding": "確定要取消連結嗎？",
     "consentPrompt": "聲明錄影提示文字",
     "consentVideo": "聲明錄影功能",
     "contacts": "通訊錄",
@@ -140,6 +145,7 @@
     "delTask": "刪除任務",
     "delUnusedAcct": "刪除未使用的帳號",
     "deleteCsv": "刪除文件",
+    "deleteDate": "永久刪除日",
     "denyReason": "拒絕原因",
     "depositPointsNotes": "儲值折抵注意事項",
     "depositPointsRules": "點數儲值規則：",
@@ -181,6 +187,8 @@
     "existingSigs": "使用現有簽名",
     "existingStmp": "使用現有印章",
     "expiredDateReminders": "合約到期日設定",
+    "exportAllHistoryCopy": "匯出全部歷史副本",
+    "exportCopySetting": "匯出副本設定",
     "fieldSetting": "欄位設定",
     "formExpiredDate": "表單到期日",
     "formName": "表單名稱",
@@ -213,8 +221,11 @@
     "noDevices": "沒有可用的裝置",
     "noPermissionGranted": "沒有給予權限",
     "noResponse": "很抱歉，目前網頁無回應",
+    "noStableFace": "未偵測到穩定人臉",
+    "noTrashTasks": "目前沒有垃圾",
     "notifySetting": "通知設定",
     "options": "選項",
+    "openAutoExportCopy": "開啟自動匯出副本",
     "orgChart": "組織圖",
     "organization": "組織",
     "otherFields": "其他欄位",
@@ -260,6 +271,7 @@
     "selectTmpl": "選擇範本",
     "sendCopy": "寄送副本",
     "sendTask": "發送",
+    "setCopyLoacation": "設定副本儲存位置",
     "setSigners": "設定簽署人",
     "settingNotFinished": "請確定您已設定完成",
     "settings": "設定",
@@ -320,6 +332,7 @@
     "tmplName": "名稱",
     "tmplNameFull": "範本名稱",
     "toggleFeature": "功能開啟",
+    "trash": "回收桶",
     "topHalf": "上半部",
     "totalPoints": "總可用點數",
     "totalTaskCount": "總可用次數",
@@ -481,6 +494,7 @@
     "name": "姓名",
     "newPassword": "新密碼",
     "newPasswordConfirm": "再次輸入您的新密碼",
+    "noNeedNotifyCancel": "不需要通知其他簽署人",
     "notPreserveFormFields": "不保留表單欄位",
     "notSendSms": "不送簡訊",
     "notifyDays": "簽署人幾日內未完成寄送通知給我",
@@ -577,10 +591,14 @@
     "applyTags": "套用標籤成功",
     "applyTagsFail": "套用標籤失敗",
     "atMostOneFile": "只能上傳至多一個檔案",
-    "attaFieldsExceedLimit": "文件-{fileName} 附件欄位數量({attaCount})超過上限({planAttaCount})",
     "attachExceedSize": "上傳檔案不得超過限制大小",
     "attachFmtNotSupport": "請上傳指定格式檔案",
+    "attaFieldsExceedLimit": "文件-{fileName} 附件欄位數量({attaCount})超過上限({planAttaCount})",
+    "authLinkOpened": "授權連結已開啟",
+    "authLinkOpenedDescription": "請在新分頁中完成 Google Drive 授權",
+    "authProcessError": "授權過程中發生錯誤",
     "autoAssigneeCannotModify": "無法修改智能指派簽署人資料",
+    "autoExportSettingUpdated": "自動匯出設定已更新",
     "b2b2cAllAuditor": "雲端憑證必須要有可以指派簽署的人員",
     "b2b2cError": "雲端憑證系統出現問題，請稍後再試",
     "b2b2cFieldsExceedLimit": "每一位簽署人可設置至多一個數位簽章欄位",
@@ -601,14 +619,15 @@
     "cancelTask": "取消任務成功",
     "cancelTaskFail": "取消任務失敗",
     "cannotMoveNoSMSPerson": "不使用簡訊通知的簽署人只能在第一位",
+    "canvasFieldsExceedLimit": "文件-{fileName} 畫布欄位({canvasCount})超過上限({planCanvasCount})",
     "ccDuplicate": "副本收件人不可重複",
     "ccError": "請確認副本收件人無誤",
     "changePassword": "變更密碼成功",
+    "collaborateSignHostError": "視訊簽會議主持人email不能和簽署人email相同",
+    "collaborateSignLimit": "簽署人中只能有一個視訊簽",
     "collaDateInvalid": "視訊簽日期格式錯誤",
     "collaDateNotSet": "請設定視訊簽日期",
     "collaDatePast": "視訊簽日期請設定晚於現在時間",
-    "collaborateSignHostError": "視訊簽會議主持人email不能和簽署人email相同",
-    "collaborateSignLimit": "簽署人中只能有一個視訊簽",
     "compDataError": "請確定公司資料正確",
     "compNameInvalid": "公司名稱必填且須小於{limit}字元",
     "confirmDelReminder": "確定要刪除履約提醒？一旦刪除將無法回復",
@@ -617,8 +636,8 @@
     "confirmGiveUpEditTmpl": "確定要放棄編輯範本？",
     "confirmGiveUpUseTmpl": "確定要放棄使用範本？",
     "createBulkAccountSuccess": "匯入帳號成功",
-    "createTask": "新增文件流程成功",
     "createSignerGroup": "新增簽署組合成功",
+    "createTask": "新增文件流程成功",
     "csvExceedsPlanLimit": "CSV資料筆數({recordsCount})超出方案限制({bulkLimit})",
     "csvExceedsUserLimit": "CSV資料筆數({recordsCount})超出可建立帳號人數上限({userLimit})",
     "csvLoadError": "CSV資料載入錯誤",
@@ -626,6 +645,9 @@
     "declineSigning": "拒絕簽核成功",
     "defltSignerDup": "預設對象不可重複",
     "delAcctSuccess": "刪除帳號成功",
+    "deleteCompany": "刪除公司成功",
+    "deleteContact": "刪除聯絡人成功",
+    "deleteExpiredDate": "刪除到期日成功",
     "delExpiredReminder": "刪除到期日提醒成功",
     "delLogo": "刪除Logo成功",
     "delReminder": "刪除履約提醒成功",
@@ -633,13 +655,11 @@
     "delSignerGroupSuccess": "刪除簽署組合成功",
     "delStmp": "刪除印章成功",
     "delTagSuccess": "刪除標籤成功",
-    "delTask": "刪除任務成功",
+    "delTask": "任務已刪除，可從資源回收桶中還原",
     "delTaskFail": "刪除任務失敗",
     "delWatermark": "刪除浮水印成功",
     "delWhitelist": "刪除白名單成功",
-    "deleteCompany": "刪除公司成功",
-    "deleteContact": "刪除聯絡人成功",
-    "deleteExpiredDate": "刪除到期日成功",
+    "deleteAllTrash": "刪除回收桶所有任務成功",
     "deviceAlreadyInUse": "相機及麥克風已被占用，請關閉後再次操作。",
     "deviceBeingUsed": "裝置正被其他軟體佔用",
     "deviceNeedPermission": "請允許使用相機及麥克風權限",
@@ -665,6 +685,8 @@
     "exceedAttachLimit": "超過附件上限",
     "exceedFileCount": "至多上傳{limit}份文件",
     "expiredDateSet": "設定到期日成功",
+    "exportTaskStarted": "匯出任務已開始",
+    "exportTaskStartedDescription": "所有任務檔案已加入匯出佇列，將分批處理",
     "externalFormEmailError": "電子郵件主旨或訊息格式有誤",
     "externalFormLimitError": "公開表單回應數量上限必須大於現有回應數量{count}",
     "externalFormSettingError": "公開表單設定有誤",
@@ -686,11 +708,13 @@
     "forwardError": "轉寄失敗",
     "forwardSameEmailError": "新簽署人email不可以與現有簽署人相同",
     "forwardSamePhoneError": "新簽署人手機不可以與現有簽署人相同",
+    "googleDriveBindingFailed": "Google Drive 綁定失敗，請重新再試一次",
+    "googleDriveBindingSuccess": "Google Drive 綁定成功",
+    "googleDriveBindingSuccessDescription": "您的 Google Drive 已成功綁定，並已開啟自動匯出功能",
     "handwritingPadInitialized": "簽名板初始化成功",
     "handwritingPadNotDetected": "偵測不到簽名板裝置",
     "iAmNotBot": "請勾選我不是機器人",
     "imgFieldsExceedLimit": "文件-{fileName} 圖片欄位({imgCount})超過上限({planImgCount})",
-    "canvasFieldsExceedLimit": "文件-{fileName} 畫布欄位({canvasCount})超過上限({planCanvasCount})",
     "input2FACodeError": "請輸入二階段驗證碼",
     "insufficientB2b2c": "每一份雲端憑證簽章的文件，需要使用任務數量一次，您要現在購買嗎?",
     "insufficientB2b2cPoints": "點數不足使用數位簽章（需要：{needPoints}，現有：{nowPoints}）",
@@ -711,17 +735,17 @@
     "labelError": "請確認名稱不為空值並小於20字元",
     "maxNodeExceed": "人數不可設定超出上限： {limit}",
     "maxNodeInvalid": "人數於必須大於0且是整數",
-    "mobileSigSubmit": "簽名已送出，請關閉此頁返回文件確認",
     "mobileSignEnd": "手機連線簽名結束，請關閉此頁",
+    "mobileSigSubmit": "簽名已送出，請關閉此頁返回文件確認",
     "mobileStampEnd": "手機連線印章去背結束，請關閉此頁",
     "mobileStampSubmit": "印章已送出，請返回文件確認",
-    "mobileUploadImageSubmit": "圖片已送出，請關閉此頁返回文件確認",
     "mobileUploadImageEnd": "手機上傳圖片結束，請關閉此頁",
+    "mobileUploadImageSubmit": "圖片已送出，請關閉此頁返回文件確認",
     "nameTooLong": "姓名不可大於30字元",
     "noAccountToShare": "沒有其他帳號可分享，請新增帳號",
     "noAutoAssignee": "沒有智能指派可以選擇，請在其他簽署人填入email",
-    "noCameraPermission": "請設定瀏覽器允許存取攝影機權限後再試一次",
     "noCamera": "請確認有可用的攝影機",
+    "noCameraPermission": "請設定瀏覽器允許存取攝影機權限後再試一次",
     "noData": "沒有資料",
     "noDivices": "請確認有可用的攝影機與麥克風裝置",
     "noDoc": "請上傳簽署文件",
@@ -734,11 +758,13 @@
     "noPhone": "請輸入手機號碼",
     "noSignersData": "沒有簽署人資料",
     "noSigningPos": "請設定簽署人簽署位置",
+    "noStableFace": "超過 20 秒未偵測到穩定人臉。請正面面向鏡頭，再試一次",
     "noTaskName": "請輸入任務名稱",
     "noTmplSelect": "請先選擇範本",
-    "noTrail": "沒有軌跡紀錄",
     "noTourTask": "找不到活動任務",
+    "noTrail": "沒有軌跡紀錄",
     "otpSentMail": "已寄送驗證碼至您的信箱",
+    "pageX": "第{page}頁",
     "pageXBlankText": "第{page}頁尚有未輸入的文字",
     "pageXCBSelect0": "第{page}頁核取方塊群組至少需要選取{minimum}欄位",
     "pageXCBSelect1": "第{page}頁核取方塊群組至多選取{maximum}欄位",
@@ -753,13 +779,13 @@
     "pageXNotSignatureAndStamp": "第{page}頁尚有未簽章的地方",
     "pageXRBAtMost1": "第{page}頁選擇按鈕群組必須選取至多1個欄位",
     "pageXTextExceeds": "第{page}頁文字欄位超出最大字數限制",
-    "pageXTextOverflow": "第{page}頁文字欄位超出最大高度限制",
     "pageXTextNotValid": "第{page}頁尚有未符合規則文字欄位",
-    "pageX": "第{page}頁",
+    "pageXTextOverflow": "第{page}頁文字欄位超出最大高度限制",
     "paymentFailed1": "失敗原因可能如下",
     "paymentFailed2": "網路連線問題：請確認您的網路連線狀態是否穩定 ",
     "paymentFailed3": "系統連線問題：付款頁面閒置過久，連結失效 ",
     "paymentFailed4": "付款銀行問題：銀行拒絕交易，請與發卡行聯絡",
+    "permanentlyDeleteTrashTask": "永久刪除任務成功",
     "pdfContainForm": "偵測到文件{fileName}包含表單欄位",
     "pdfOnly": "請上傳PDF格式檔案",
     "pdfPwdError": "文件受密碼保護，請在上傳文件之前將密碼移除",
@@ -769,9 +795,9 @@
     "planActive": "您目前訂閱使用的是{plan}，請到方案資訊設定，進行方案升級或加購帳號人數",
     "planNotFound": "找不到對應訂閱的方案",
     "pleaseRotateLandscape": "將您的裝置旋轉至「橫向」 以獲得更大的簽名區域",
-    "pleaseRotatePortrait": "將您的裝置旋轉至「直向」 以獲得更大的簽名區域",
     "pleaseRotateLandscapeForStream": "請將您的設備旋轉至“橫向”以獲得更大的視訊空間",
     "pleaseRotateOr": "如果螢幕依然沒有旋轉， 請確認已關閉方向鎖定設定",
+    "pleaseRotatePortrait": "將您的裝置旋轉至「直向」 以獲得更大的簽名區域",
     "plsUploadStamp": "請上傳印章圖片",
     "preDownloadFileError": "無法下載文件",
     "prefillAttachmentNoValue": "預填附件必須上傳檔案",
@@ -779,8 +805,11 @@
     "prefillRadioNotSelect": "預填選擇按鈕必須選取",
     "prefillTextNoValue": "預填文字請設定文字初始值",
     "purchasePlanNotCompanyAdmin": "您不是公司管理員，請聯絡公司管理員帳號購買方案",
-    "reVerifyMailError": "重新寄送驗證信錯誤",
-    "reVerifyMailSuccess": "請在24小時內到信箱驗證帳號，若沒收到，請檢查您的垃圾郵件",
+    "recordingModePreview": "請將臉部對準鏡頭，偵測到人臉後將自動開始錄影",
+    "recordingModeReady": "偵測到人臉，即將開始錄影",
+    "recordingModeRecording": "錄影中...",
+    "recoverTrashTask": "還原任務成功",
+    "readonlyCheckBoxSelect0": "僅供讀取核取方塊群組至少需要選取{minimum}欄位",
     "readOnlyCheckBoxSelect1": "僅供讀取核取方塊群組至多選取{maximum}欄位",
     "readOnlyCheckBoxSelect2": "僅供讀取核取方塊群組必須剛好選取{maximum}欄位",
     "readOnlyCheckBoxSelect3": "僅供讀取核取方塊群組必須選取{minimum} - {maximum}欄位",
@@ -788,28 +817,29 @@
     "readOnlyDropdownNoOptions": "僅供讀取下拉式選單必須設定選項值",
     "readOnlyRadioNoSelet": "僅供讀取按鈕群組必須選取1個欄位",
     "readOnlyTextNoValue": "僅供讀取文字請設定文字初始值",
-    "readonlyCheckBoxSelect0": "僅供讀取核取方塊群組至少需要選取{minimum}欄位",
     "recordingError": "無法進行錄影，請確認裝置正常運作，是否有其他程式或網頁正在使用攝影機與麥克風",
     "recordingTimesUp": "錄影時間已到，未點選同意按鈕，請再次點選確定按鈕重新進行聲明錄影",
     "redeemSuccess": "恭喜您獲得免費BreezySign專業方案三個月",
     "reloadConfirm": "要重新載入網站嗎？",
-    "remindSign": "寄送提醒簽署成功",
     "reminderMailContentError": "請確認信件內容長度小於限制(內容：1000字元)",
     "reminderMailError": "請確認信件主旨與內容長度小於限制(主旨：100字元，內容：1000字元)",
     "reminderTimeError": "提醒時間錯誤，請確認提醒時間是在1～30日內的整數，並且沒有重複",
     "reminderTimeError2": "請輸入提醒時間",
     "reminderTitleError": "請填入履約提醒主旨，並且不可超出50字元",
+    "remindSign": "寄送提醒簽署成功",
     "removeBgFailed": "去背失敗，請重新上傳",
     "removeTags": "移除標籤成功",
     "removeTagsFail": "移除標籤失敗",
-    "requiredUnfillOrInvalid": "必填欄位未填或格式錯誤",
-    "requiredSignInBookName": "請檢查簽到簿名稱",
     "requiredSignInBookDescription": "請檢查簽到簿描述",
+    "requiredSignInBookName": "請檢查簽到簿名稱",
+    "requiredUnfillOrInvalid": "必填欄位未填或格式錯誤",
     "resendMail": "重新寄送信件成功",
     "reservedSignerError": "請確認預留簽署人無誤",
     "resetPasswordSuccess": "重設密碼成功",
     "resumeSubs": "恢復訂閱成功",
     "returnSigning": "退回簽核成功",
+    "reVerifyMailError": "重新寄送驗證信錯誤",
+    "reVerifyMailSuccess": "請在24小時內到信箱驗證帳號，若沒收到，請檢查您的垃圾郵件",
     "saveDraft": "儲存草稿成功",
     "saveDraftFail": "儲存草稿失敗",
     "saveExpiredReminderError": "儲存到期日提醒失敗",
@@ -823,20 +853,20 @@
     "sendOtpPhone": "已寄送驗證碼簡訊至您的手機",
     "settingsSaved": "儲存設定成功",
     "shareLinkCopied": "已複製分享連結",
+    "signatureRequired": "簽名欄位為必填",
     "signComplete": "簽核成功",
+    "signerGroupError": "請確定簽署組合欄位格式正確",
+    "signerGroupLengthError": "簽署組合人數與簽署人數不符",
+    "signersDuplicate": "設定簽署人不可重複",
+    "signersEmailDup": "人員資料email不可重複",
+    "signerSettingError": "請確認設定簽署人無誤",
+    "signersInfoError": "請確認人員資料無誤",
     "signHere": "請在此處簽名",
-    "signInBookSettingError": "請確認簽到簿設定無誤",
     "signInBookCreated": "建立簽到簿成功",
+    "signInBookSettingError": "請確認簽到簿設定無誤",
     "signInBookUpdated": "更新簽到簿成功",
     "signInSuccess": "簽到成功",
     "signLinkExpire": "簽署連結已過期",
-    "signatureRequired": "簽名欄位為必填",
-    "signerGroupError": "請確定簽署組合欄位格式正確",
-    "signerGroupLengthError": "簽署組合人數與簽署人數不符",
-    "signerSettingError": "請確認設定簽署人無誤",
-    "signersDuplicate": "設定簽署人不可重複",
-    "signersEmailDup": "人員資料email不可重複",
-    "signersInfoError": "請確認人員資料無誤",
     "signupSuccess": "我們已經發送帳號驗證連結到你的信箱：",
     "smsSubjectLengthConfirm": "任務名稱與連結總長度超過{limit}個字，簡訊使用點數以每{limit}個字預估增加1點，但以實際扣除點數為主，是否繼續?",
     "socketDisconnect": "網路連線狀態出現異常，請重新進入簽署房間",
@@ -859,13 +889,15 @@
     "toggleAatlTrack": "更新AATL軌跡設定成功",
     "toggleWhitelist": "更新白名單設定成功",
     "tourCannotDecline": "活動中無法拒絕任務",
-    "tourCreateTask3Required": "活動要求：請設定兩個簽署人",
     "tourCreateTask10Required": "其中一個簽署人必須有文字欄位，且字體大小為20，另一個簽署人必須有簽名欄位",
+    "tourCreateTask3Required": "活動要求：請設定兩個簽署人",
     "tourNotFinish": "前次教學中斷，請回到首頁重新開始",
     "unableAccessCamera": "請確認有可用的攝影機，並且沒有其他程式或網頁正在使用攝影機",
     "unableAccessDevide": "請確認是否有其他程式或網頁正在使用攝影機與麥克風",
+    "unbindSuccess": "解除綁定成功",
     "unsaveSettings": "有尚未儲存的資料，是否確定放棄設定？",
-    "upVideoError": "上傳影片錯誤",
+    "updateCompany": "更新公司成功",
+    "updateSettingSuccess": "更新設定成功",
     "updCompData": "更新公司資料成功",
     "updLogo": "更新Logo成功",
     "updProfile": "更新基本資料成功",
@@ -877,17 +909,17 @@
     "updWatermark": "更新浮水印成功",
     "updWatermarkOpacity": "更新浮水印透明度成功",
     "updWhitelist": "更新白名單成功",
-    "updateCompany": "更新公司成功",
     "upgradeAcctCount": "加購帳號成功",
-    "upgradeUserCount": "當前的方案可以加購人數，是否前往方案資訊頁面加購？",
     "upgradePlanToUseForm": "請升級方案才能使用此表單功能。",
     "upgradePlanToUseSignInBook": "請升級方案才能使用此簽到簿功能。",
     "upgradeToEntToUnlock": "，升級企業版可以解鎖限制",
+    "upgradeUserCount": "當前的方案可以加購人數，是否前往方案資訊頁面加購？",
     "uploadAccountDupEmail": "以下帳號email重複：{duplicateEmails}",
     "uploadAttach": "上傳附件成功",
     "uploadAttachFail": "上傳附件失敗",
     "uploadDoc": "上傳文件成功",
     "uploadPdfFail": "上傳PDF失敗",
+    "upVideoError": "上傳影片錯誤",
     "useTmplSuccess": "套用範本成功",
     "xlsxExceedsPlanLimit": "XLSX資料筆數({recordsCount})超出方案限制({bulkLimit})",
     "xlsxExceedsUserLimit": "XLSX資料筆數({recordsCount})超出可建立帳號人數上限({userLimit})",
@@ -939,6 +971,8 @@
     "editWhitelist": "編輯白名單",
     "emailSign": "寄送電子郵件給簽署人，簽署人開啟連結進行簽核",
     "enableAcct": "開啟帳號",
+    "exportCopyDone": "已匯出",
+    "exportCopyPending": "等待匯出",
     "faceSign": "簽署人在現場當面簽署後填寫電子信箱收取副本",
     "firstOpen": "初次開啟：{time}",
     "fontSize": "字體大小",
@@ -1012,9 +1046,11 @@
     "backToHome": "回首頁",
     "backToLogin": "回登入頁面",
     "beginSign": "開始簽署",
+    "bind": "連結",
     "bulkCreateAcct": "匯入帳號",
     "bulkSend": "批次發送",
     "cancel": "取消",
+    "cancelBinding": "取消連結",
     "cancelSubs": "取消訂閱",
     "cancelTask": "取消任務",
     "change": "變更",
@@ -1028,6 +1064,7 @@
     "compMembers": "公司成員",
     "complete": "完成",
     "confirm": "確認",
+    "confirmDelete": "確定刪除",
     "confirmUpload": "確認上傳",
     "contacts": "通訊錄",
     "contactMe": "專人請與我聯絡",
@@ -1044,6 +1081,8 @@
     "decline": "拒絕",
     "deinitialize": "取消初始化",
     "delete": "刪除",
+    "deleteAll": "全部刪除",
+    "deleteFromTrash": "從回收桶刪除",
     "depositCloudTaskCounts": "儲值次數",
     "depositNow": "立即儲值",
     "depositPoints": "儲值點數",
@@ -1065,6 +1104,7 @@
     "enablePermissions": "啟用權限",
     "endTrialUpgrade": "結束試用並升級",
     "enterText": "填入文字",
+    "exportAll": "全部匯出",
     "exportData": "匯出資料",
     "forward": "轉寄",
     "giveUp": "放棄",
@@ -1107,6 +1147,7 @@
     "qrCodeUploadImage": "QR Code 上傳圖片",
     "radioButton": "選擇按鈕",
     "recreateLink": "重取連結",
+    "recover": "還原",
     "redeemNow": "馬上兌換",
     "remindSign": "提醒簽署",
     "remove": "移除",
@@ -1252,6 +1293,8 @@
     "b2b2cTask": "雲端憑證",
     "b2b2cWaitMail": "請至{mail}信箱收信，收到驗證信後，須在1分鐘內完成身分驗證，否則會簽署失敗。",
     "b2b2cWaiting": "等待授權中...",
+    "bindGoogleDriveDescription": "請連結您的 Google Drive 帳號，以便系統將副本上傳儲存。",
+    "bindSuccess": "已連結",
     "bottomHalfDefault": "本同意書簽名均爲您本人所簽，您的簽名圖如下列： \\n{SIGNATURE}",
     "checkPermission": "正在確認攝影機與麥克風權限，請給予相關授權",
     "checkboxGrp": "核取方塊群組",
@@ -1290,6 +1333,7 @@
     "confirmDelWatermark": "確定要刪除浮水印？ 一旦刪除將無法回復",
     "confirmDelWhitelist": "確定要刪除白名單？ 一旦刪除將無法回復",
     "confirmDelX": "確定刪除{x}？",
+    "confirmDeleteAllTrash": "一旦刪除回收桶內的任務，將無法復原，你確定要繼續嗎?",
     "confirmDisable2FA": "確定要停用兩階段驗證？",
     "confirmDisableAcct": "確定要停用 {name} ?",
     "confirmDisableAcct2": "該帳號將無法登入系統",
@@ -1312,6 +1356,7 @@
     "confirmPauseAcct2": "該帳號將無法登入系統",
     "confirmResumeSubs": "如果要繼續恢復訂閱動作，請點選下方「確定」按鈕",
     "confirmResumeSubs2": "恢復訂閱後，您的付費方案將會在{renew}扣款自動續訂",
+    "confirmUnbinding": "取消後，系統將停止自動匯出副本。請放心，這不會影響任何已經匯出的檔案。",
     "confirmUpgradeAcctCount": "如果要繼續加購帳號，請點選下方「確定」按鈕",
     "confirmUpgradeAcctCount2": "點選「確定」後，系統會根據您目前訂閱週期剩餘的天數計算需加購帳號額度的金額。",
     "confirmUpgradeAcctCount3": "下次自動扣款時，將以帳號額度{newCount}人的費用繼續進行續訂。",
@@ -1339,6 +1384,7 @@
     "enterRoomPassword": "請輸入簽署房間安全密碼以進入簽署房間檢視簽署文件",
     "everyUserCanHave": "每人享有：",
     "expiresBefore": "{date}前到期",
+    "exportAllHistoryCopyDescription": "手動匯出所有歷史文件副本至已連結的儲存空間。",
     "fieldsNotSet": "以下欄位未被設定，請仔細檢查是否設定完成。",
     "fieldsSelected": "選取欄位",
     "filter": "篩選：",
@@ -1375,6 +1421,7 @@
     "noTemplatesDescr": "建立可以重複使用的範本，加速建立任務的時間",
     "notSign": "尚未簽署",
     "onlyWindows": "僅支援Windows系統",
+    "openAutoExportCopyDescription": "將新完成的簽署文件副本，自動同步到您指定的雲端儲存空間。",
     "or": "或",
     "or3rdPartyLogin": "你也可用以下方式登入",
     "padDescr": "電腦簽署文件時，使用蒙恬的簽名板，可以體驗如同在紙上揮筆的手寫感，歡迎選購，",
@@ -1498,6 +1545,7 @@
     "statusSigned": "已簽署",
     "statusWait": "等待中",
     "statusWaitSign": "等待簽署",
+    "storageFull": "空間已滿",
     "supportFormat": "適用檔案類型：{formats}",
     "supportHandwritingDevice": "支持簽名板簽署",
     "surveyInternalReview": "內部簽核",
@@ -1516,6 +1564,7 @@
     "taskStatus_REJECTED": "已拒絕",
     "testAudio": "請對麥克風說話，測試麥克風收音狀況",
     "thickness": "線段粗細",
+    "trashDescription": "回收桶中的任務將保留 14 天，隨後永久刪除",
     "topHalfDefault": "文件該同意書內的各處簽章及已填寫之全部內容，您本人已詳細閱讀及了解。若您同意以下說明，請點頭並點選下列同意鈕完成簽署動作。\\n若不同意，請點選不同意鈕，並離開簽署流程。",
     "tourActivityProgress": "完成進度",
     "tourActivityFinishedDescription": "完成領取就可享BreezySign專業方案三個月唷",
@@ -1595,7 +1644,7 @@
     "welcomeSignEntrance": "歡迎來到DocuDay天天簽！在您繼續簽署之前，請花一點時間閱讀並同意我們的服務條款及隱私權政策。這將確保您了解我們如何保護您的個人資料，以及我們為您提供的服務安全性。",
     "welcomeTypeSelect": "請先告知您的使用目的，我們將為您推薦BreezySign最佳方案：",
     "willSentToYourMail": "將寄至您的電子信箱",
-    "yars": "年",
+    "years": "年",
     "youHaveSignedIn": "您已簽到成功",
     "yourPlan": "您的方案",
     "textColor": "文字顏色"
@@ -1634,6 +1683,7 @@
     "standardSignature": "標準數位簽署",
     "terms": "服務條款",
     "termsAndPrivacy": "服務條款及隱私權政策",
+    "trash": "回收桶",
     "tutorialVideo": "教學影片",
     "upgradeNow": "立即升級",
     "upgradePlan": "升級",
